Modified spring security